[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Roulette.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/Background.png" type="Texture" id=2]
[ext_resource path="res://images/BackgroundColorTopRight.png" type="Texture" id=3]
[ext_resource path="res://images/BackgroundColorTopLeft.png" type="Texture" id=4]
[ext_resource path="res://scripts/Game.gd" type="Script" id=5]
[ext_resource path="res://scenes/Board.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/tres/allagard32title.tres" type="DynamicFont" id=7]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Node2D" parent="."]
modulate = Color( 1.4, 1.4, 1.4, 1 )

[node name="Background" type="Sprite" parent="BG"]
position = Vector2( 960, 540 )
scale = Vector2( 1.40556, 1.40625 )
texture = ExtResource( 2 )

[node name="BgTeam1" type="Sprite" parent="BG"]
position = Vector2( 960, 540 )
scale = Vector2( 1.406, 1.406 )
texture = ExtResource( 4 )

[node name="BgTeam2" type="Sprite" parent="BG"]
position = Vector2( 960, 540 )
scale = Vector2( 1.406, 1.406 )
texture = ExtResource( 3 )

[node name="BgTeam3" type="Sprite" parent="BG"]
position = Vector2( 960, 540 )
rotation = -3.14159
scale = Vector2( 1.406, 1.406 )
texture = ExtResource( 3 )

[node name="BgTeam4" type="Sprite" parent="BG"]
position = Vector2( 960, 540 )
rotation = 3.14159
scale = Vector2( 1.406, 1.406 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="BG"]
margin_left = 500.0
margin_top = 75.0
margin_right = 1400.0
margin_bottom = 975.0
color = Color( 0.156863, 0.156863, 0.156863, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )

[node name="Viewports" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VpTeam1" type="ViewportContainer" parent="Viewports"]
margin_left = 25.0
margin_top = 25.0
margin_right = 809.0
margin_bottom = 809.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 15
size_flags_vertical = 15
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Viewports/VpTeam1"]
size = Vector2( 784, 784 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Roulette" parent="Viewports/VpTeam1/Viewport" instance=ExtResource( 1 )]
position = Vector2( 392, 392 )
team = 0

[node name="VpTeam2" type="ViewportContainer" parent="Viewports"]
margin_left = 1503.0
margin_top = 25.0
margin_right = 2287.0
margin_bottom = 809.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 15
size_flags_vertical = 15
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Viewports/VpTeam2"]
size = Vector2( 784, 784 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Roulette" parent="Viewports/VpTeam2/Viewport" instance=ExtResource( 1 )]
position = Vector2( 392, 392 )
team = 1

[node name="VpTeam3" type="ViewportContainer" parent="Viewports"]
margin_left = 25.0
margin_top = 663.0
margin_right = 809.0
margin_bottom = 1447.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 15
size_flags_vertical = 15
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Viewports/VpTeam3"]
size = Vector2( 784, 784 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Roulette" parent="Viewports/VpTeam3/Viewport" instance=ExtResource( 1 )]
position = Vector2( 392, 392 )
team = 2

[node name="VpTeam4" type="ViewportContainer" parent="Viewports"]
margin_left = 1478.0
margin_top = 663.0
margin_right = 2262.0
margin_bottom = 1447.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 15
size_flags_vertical = 15
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Viewports/VpTeam4"]
size = Vector2( 784, 784 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Roulette" parent="Viewports/VpTeam4/Viewport" instance=ExtResource( 1 )]
position = Vector2( 392, 392 )
team = 3

[node name="Board" type="ViewportContainer" parent="Viewports"]
margin_left = 500.0
margin_top = 75.0
margin_right = 1400.0
margin_bottom = 975.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Viewports/Board"]
size = Vector2( 900, 900 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Board" parent="Viewports/Board/Viewport" instance=ExtResource( 6 )]

[node name="Popup" type="Popup" parent="."]
pause_mode = 2
margin_right = 241.0
margin_bottom = 90.0
popup_exclusive = true

[node name="Button" type="Button" parent="Popup"]
margin_left = 860.0
margin_top = 510.0
margin_right = 940.0
margin_bottom = 530.0
text = "UNPAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Popup"]
margin_left = 980.0
margin_top = 510.0
margin_right = 1060.0
margin_bottom = 530.0
text = "UP NOW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Popup"]
wait_time = 5.0
one_shot = true

[node name="Points" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team1" type="Label" parent="Points"]
margin_left = 50.0
margin_top = 480.0
margin_right = 170.0
margin_bottom = 540.0
custom_fonts/font = ExtResource( 7 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team2" type="Label" parent="Points"]
margin_left = 1580.0
margin_top = 480.0
margin_right = 1700.0
margin_bottom = 540.0
custom_fonts/font = ExtResource( 7 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team3" type="Label" parent="Points"]
margin_left = 220.0
margin_top = 520.0
margin_right = 340.0
margin_bottom = 580.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team4" type="Label" parent="Points"]
margin_left = 1750.0
margin_top = 520.0
margin_right = 1870.0
margin_bottom = 580.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Point" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="action" from="Viewports/VpTeam1/Viewport/Roulette" to="Viewports/Board/Viewport/Board" method="_on_Roulette_action"]
[connection signal="action" from="Viewports/VpTeam2/Viewport/Roulette" to="Viewports/Board/Viewport/Board" method="_on_Roulette_action"]
[connection signal="action" from="Viewports/VpTeam3/Viewport/Roulette" to="Viewports/Board/Viewport/Board" method="_on_Roulette_action"]
[connection signal="action" from="Viewports/VpTeam4/Viewport/Roulette" to="Viewports/Board/Viewport/Board" method="_on_Roulette_action"]
[connection signal="pressed" from="Popup/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Popup/Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="Popup/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Point" to="." method="_on_Point_timeout"]
